
*********************************************************************************************
*                                  CHANGE LOG 1.0.1 - > 1.1.0                               *
*********************************************************************************************

 * (01/26/2012) kivan
	# 252
	
	INTERNAL: SQL and DB structure changed - some tables now have field CHANGED due to comming need of sync files with EEG base
	CHANGED: added button of Import files (no functionality now), JerpaLang updated. Few minor bug fixes.

 * (01/25/2012) kivan
	# 251
	
	FIXED: fixed FileState of file, which is being downloaded
	"FIXED": EDEDB and its components fails to use Look And Feel as the rest of the app (??), at least mainPanel set manually

 * (01/25/2012) kivan
	# 250
	
	FIXED: dataFileDao - getter of data files by experiment objects - session issues
	CHANGED: added some javadoc, DataFiles from local DB can be now visualized in Signal Perspective.
	

 * (01/25/2012) kivan
	# 249
	
	CHANGED: updated JerpLang, Downloader now implements Language observable. Few code cleanings.
	FIXED: file download notification fixed (was showing null percents)

 * (01/24/2012) kivan
	# 248
	
	CHANGED: corrected few bugs (mostly in GUI), added some commentaries and javadoc. EDEDB still deeply unfunctional.
 
 * (01/24/2012) kivan
	# 247
	
	INTERNAL: Hibernate mapping now used in order to work with local DB. Created DAOs.

	EDEDB is now in "work-in-progress" state, plenty of bugs - commit was necessary
				in order to prevent potential data loss.
      
 * (10/25/2011) kivan
    # 246
    
      CHANGED: EDEDClient lib updated to new version in order to work with "revisions" of provided data.
      CHANGED: data are now synchronized in accordance to ORA_ROWSCN attribute of EEG Database (Oracle). This is similar to versions, revisions.
      Due to this change, SQL files were updated as well as other java files.
      FIXED: working status visible during synchronization.
      